--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello world!</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
