--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -7,3 +7,9 @@
 <!-- space -->
 
 {% block title %} Home page {% endblock title %}
+
+<!-- space -->
+{% block main-content %}
+<h1>Welcome Here</h1>
+
+{% endblock main-content %}
